# tgfp-job-runner

./: Dockerfile  README.md  bump_version_and_deploy.sh  docker-compose.yaml  my_scheduler.py  poetry_update.sh  pyproject.toml  run.py  scheduler.py
.github/workflows/: docker-image.yaml
scripts/: __init__.py  external.py  jobs.py
