[tool.poetry]
name = "tgfp-job-runner"
version = "4.7.0"
description = "Scripts to help with the running of The Great Football Pool"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
tgfp-lib = "^2.2.2"
tgfp-nfl = "5.4.2"
arrow = "^1.2.3"
sentry-sdk = "^1.31.0"
pylint = "^3.0.2"
setuptools = "^69.0.2"
prefect = "^2.14.6"
discord-py = "^2.3.2"
aiomqtt = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
