[tool.poetry]
name = "tgfp-job-runner"
version = "4.12.2"
description = "Scripts to help with the running of The Great Football Pool"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
tgfp-lib = "^2.7.2"
tgfp-nfl = "^6.2.0"
arrow = "^1.3.0"
pylint = "^3.0.3"
setuptools = "^69.2.0"
prefect = "^2.16.5"
discord-py = "^2.3.2"
aiomqtt = "^2.0.1"
matplotlib = "^3.8.3"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"
pillow = "^10.2.0"
discord = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
